--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -10,7 +10,7 @@ body {
 
 /* Header Styles */
 header {
-  background: linear-gradient(to right, #2193b0, #6dd5ed); /* Semi-transparent background */
+  background: linear-gradient(to right, #008DDA, #00A9FF); /* Semi-transparent background */
   padding: 10px 20px;
   /* width: 100%; */
   z-index: 1000;
