--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<header>
+<!-- <header>
   <nav>
     <ul>
       <li><a href="/portfolio" routerLinkActive="active">Home</a></li>
@@ -7,5 +7,35 @@
       <li><a href="portfolio/contact" routerLinkActive="active">Contact</a></li>
     </ul>
   </nav>
-</header>
+</header> -->
+   <!-- Header & Navbar -->
+   <header class=" fixed-top">
+    <nav class="container-xxl navbar navbar-expand-lg ">
+      <div class="container-fluid">
+        <a class="navbar-brand fw-bold fs-3 text-white" href="/portfolio">Venkat Kothakota</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item mx-2">
+              <a class="nav-link" href="portfolio/skills">SKILLS</a>
+            </li>
+            <li class="nav-item mx-2">
+              <a class="nav-link" href="portfolio/projects">PORTFOLIO</a>
+            </li>
+            <li class="nav-item mx-2">
+              <a class="nav-link" href="portfolio/about">ABOUT</a>
+            </li>
+            <li class="nav-item mx-2">
+              <a class="nav-link" href="portfolio/resume">RESUME</a>
+            </li>
+            <li class="nav-item mx-2">
+              <a class="nav-link" href="portfolio/contact">CONTACT</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
 <router-outlet />
