--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -16,7 +16,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: rgb(12, 11, 11);
+  color: #008DDA;
   text-align: center;
   z-index: 1; /* Ensure it appears above other content if necessary */
   opacity: 0; /* Start with an opacity of 0 */
@@ -54,7 +54,8 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: linear-gradient(to right, #2193b0, #6dd5ed);
+  /* background: linear-gradient(to right, #2193b0, #6dd5ed); */
+  background-image: url("../../assets/venki.jpg");
   color: white;
   opacity: 0;
   transform: translateY(-100%); /* Start off-screen at the top */
@@ -66,6 +67,12 @@
   user-select: none; /* Prevent text selection */
   z-index: 10;
   padding: 0.5rem;
+  height: 100vh;
+  /* background-image: url("../images/home-bg.jpg"); */
+  background-repeat: no-repeat;
+  background-position: 60% 0%;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 /* Ensure touch interactions are optimized */
