--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -54,8 +54,10 @@
   left: 0;
   right: 0;
   bottom: 0;
-  /* background: linear-gradient(to right, #2193b0, #6dd5ed); */
-  background-image: url("../../assets/venki.jpg");
+  background: linear-gradient(to bottom, #00A9FF, #B3E5FC);
+
+
+  /* background-image: url("../../assets/venki.jpg"); */
   color: white;
   opacity: 0;
   transform: translateY(-100%); /* Start off-screen at the top */
@@ -145,7 +147,7 @@
     height: 80px; /* Adjust height for mobile */
   }
   video {
-   margin-top: 100px;
+   /* margin-top: 100px; */
   
   }
   
@@ -172,7 +174,7 @@
   }
   video {
   
-    margin-top: 100px;
+    /* smargin-top: 100px; */
   }
 }
 
